angular example setup